--- a/css/reset.css
+++ b/css/reset.css
@@ -1,8 +1,21 @@
-*{margin:0px; padding:0px;}
-body{ font-family: 맑은 고딕;
-      font-size:12px;
-      color:#333;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
-img{border:0px;}
-ul, li{list-style:none;}
-a{text-decoration: none; color:#333;}
+body {
+  font-family: 맑은 고딕;
+  font-size: 12px;
+  color: #333;
+}
+img {
+  border: 0px;
+}
+ul,
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: #333;
+}
