--- a/css/style.css
+++ b/css/style.css
@@ -29,15 +29,25 @@
   display: flex;
   justify-content: space-between;
   margin-top: 50px;
-  margin-left: 100px;
+  margin-left: 150px;
   cursor: pointer;
+}
+
+#main .nav li a {
+  transition: all 0.3s ease;
+}
+
+#main .nav li a:hover {
+  /* color: gray; */
+  font-size: 16px;
+  text-decoration: underline;
 }
 
 #main .login {
   width: 130px;
-  height: 17px;
+  height: 30px;
   margin-top: 50px;
-  margin-right: 70px;
+  margin-right: 200px;
   text-align: center;
   border: 1px solid rgb(177, 166, 157);
   background-color: rgb(177, 166, 157);
@@ -52,8 +62,8 @@
 }
 
 #main .logo {
-  padding-top: 30px;
-  padding-left: 50px;
+  padding-top: 80px;
+  padding-left: 250px;
 }
 
 /* 탁월한 셀렉션 ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ*/
@@ -149,6 +159,7 @@
   border-radius: 10px;
   padding: 6px 24px 10px 24px;
   font-weight: bold;
+  transition: all 0.3s ease-in-out;
 }
 
 #section .image_shop a:hover {
@@ -209,12 +220,13 @@
   border-radius: 10px;
   padding: 6px 24px 10px 24px;
   font-weight: bold;
+  transition: all 0.3s ease-in-out;
 }
 
 #launch .launch_shop a:hover {
-  border: 1px solid rgb(177, 166, 157);
-  background-color: rgb(177, 166, 157);
-  color: rgb(44, 44, 44);
+  border: 1px solid rgb(116, 116, 116);
+  background-color: rgb(44, 44, 44);
+  color: white;
   cursor: pointer;
 }
 
@@ -226,6 +238,7 @@
   background-image: url(../images/image4.jpg);
   background-size: cover;
   margin-top: 50px;
+  transition: all 0.3s ease-in-out;
 }
 
 #rec:hover {
@@ -248,6 +261,7 @@
   background-image: url(../images/main/image.jpg);
   background-size: cover;
   margin-top: 10px;
+  transition: all 0.3s ease-in-out;
 }
 
 #guide:hover {
@@ -299,6 +313,7 @@
   border: 1px solid black;
   border-radius: 10px;
   padding: 6px 24px 6px 24px;
+  transition: all 0.3s ease-in-out;
 }
 
 #history .h_sciprt a:hover {
@@ -387,6 +402,7 @@
   border: 1px solid black;
   border-radius: 10px;
   padding: 8px 24px 8px 24px;
+  transition: all 0.3s ease-in-out;
 }
 
 #store .s_script .close a:hover {
@@ -440,6 +456,7 @@
   border: 1px solid black;
   border-radius: 6px;
   padding: 6px 13px;
+  transition: all 0.3s ease-in-out;
 }
 
 #travel .t_script a:hover {
@@ -459,14 +476,17 @@
 
 #travel .t_pic .p1 {
   width: 33%;
+  transition: all 0.3s ease-in-out;
 }
 
 #travel .t_pic .p2 {
   width: 33%;
+  transition: all 0.3s ease-in-out;
 }
 
 #travel .t_pic .p3 {
   width: 33%;
+  transition: all 0.3s ease-in-out;
 }
 
 #travel .t_pic .p1:hover {
