--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 #main {
   width: 100%;
   height: 700px;
-  background-image: url("../images/main\ image\ \(4\).jpg");
+  background-image: url("https://www.aesop.com/u1nb1km7t5q7/6QujjdNgQGwriRDdA9LZGJ/6d71034933fdee8a08f885f0c6c1b733/Aesop_Healthy_Skin_Care_and_Support_2022_Web_Homepage_Primary_Warm_2_Full_Bleed_Desktop_L_2880x1044px.jpg");
   background-size: cover;
 }
 
@@ -31,22 +31,21 @@
   margin-top: 50px;
   margin-left: 150px;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 14px;
 }
 
 #main .nav li a {
-  transition: all 0.3s ease;
+  transition: all 0.5s ease-in-out;
 }
 
 #main .nav li a:hover {
   /* color: gray; */
-  font-size: 24px;
   text-decoration: underline;
 }
 
 #main .login {
-  width: 200px;
-  height: 40px;
+  width: 160px;
+  height: 30px;
   margin-top: 50px;
   margin-right: 200px;
   display: flex;
@@ -62,11 +61,11 @@
 
 #main .login a {
   color: #fff;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 #main .logo {
-  padding-left: 350px;
+  padding-left: 250px;
 }
 
 #main .logo img {
@@ -83,7 +82,7 @@
 }
 
 #section h3 {
-  font-size: 35px;
+  font-size: 24px;
   text-align: center;
   padding-top: 90px;
 }
@@ -163,21 +162,18 @@
 }
 
 #section .image_shop a {
-  font-size: 18px;
   border: 1px solid black;
   border-radius: 10px;
-  padding: 6px 24px 10px 24px;
+  padding: 6px 20px;
+  font-size: 12px;
   font-weight: bold;
   transition: all 0.3s ease-in-out;
 }
 
 #section .image_shop a:hover {
-  font-size: 18px;
   color: #fff;
   border: 1px solid rgb(44, 44, 44);
   background-color: rgb(44, 44, 44);
-  border-radius: 10px;
-  padding: 6px 24px 10px 24px;
   cursor: pointer;
 }
 
@@ -201,18 +197,18 @@
 /* 한정출시 설명내용 */
 #launch h3 {
   color: white;
-  font-size: 30px;
+  font-size: 24px;
 }
 
 #launch h4 {
   color: #fff;
-  font-size: 16px;
+  font-size: 14px;
   padding-top: 30px;
 }
 
 #launch p {
   color: #fff;
-  font-size: 14px;
+  font-size: 12px;
   padding-top: 20px;
 }
 
@@ -222,12 +218,12 @@
 }
 
 #launch .launch_shop a {
-  font-size: 18px;
   border: 1px solid rgb(44, 44, 44);
   background-color: rgb(116, 116, 116);
   color: rgb(53, 16, 16);
   border-radius: 10px;
-  padding: 6px 24px 10px 24px;
+  padding: 6px 20px;
+  font-size: 12px;
   font-weight: bold;
   transition: all 0.3s ease-in-out;
 }
@@ -304,11 +300,11 @@
 }
 
 #history .h_sciprt h3 {
-  font-size: 40px;
+  font-size: 24px;
 }
 
 #history .h_sciprt p {
-  font-size: 24px;
+  font-size: 16px;
   margin-top: 20px;
 }
 
@@ -319,10 +315,10 @@
 }
 
 #history .h_sciprt a {
-  font-size: 18px;
-  border: 1px solid black;
   border-radius: 10px;
-  padding: 6px 24px 6px 24px;
+  padding: 6px 20px;
+  font-size: 12px;
+  border: 1px solid black;
   transition: all 0.3s ease-in-out;
 }
 
@@ -395,11 +391,11 @@
 }
 
 #store .s_script h3 {
-  font-size: 40px;
+  font-size: 24px;
 }
 
 #store .s_script p {
-  font-size: 24px;
+  font-size: 16px;
   margin-top: 20px;
 
 }
@@ -410,10 +406,10 @@
 }
 
 #store .s_script .close a {
-  font-size: 14px;
   border: 1px solid black;
   border-radius: 10px;
-  padding: 8px 24px 8px 24px;
+  padding: 6px 20px;
+  font-size: 12px;
   transition: all 0.3s ease-in-out;
 }
 
@@ -452,12 +448,12 @@
 }
 
 #travel .t_script h3 {
-  font-size: 40px;
+  font-size: 24px;
 }
 
 #travel .t_script p {
   margin-top: 20px;
-  font-size: 24px;
+  font-size: 16px;
 }
 
 #travel .t_script>div {
@@ -465,7 +461,7 @@
 }
 
 #travel .t_script div>a {
-  font-size: 14px;
+  font-size: 12px;
   border: 1px solid black;
   border-radius: 6px;
   padding: 6px 13px;
