--- a/css/addcart.css
+++ b/css/addcart.css
@@ -94,3 +94,10 @@
   background-color: rgb(14, 14, 14);
   cursor: pointer;
 }
+
+
+.product_des .back {
+  color: gray;
+  margin-top: 30px;
+  font-size: 12px;
+}
